# cad-viewer-widget

./: .bumpversion.cfg  .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  RELEASE.md  Untitled.ipynb  cad-viewer-widget.json  environment.yml  install.json  pyproject.toml  setup.cfg  setup.py  test.ipynb
cad_viewer_widget/: __init__.py  _version.py  boundingbox.py  embed.py  serializer.py  sidecar.py  utils.py  widget.py
docs/: index.html
docs/cad_viewer_widget/: boundingbox.html  embed.html  index.html  sidecar.html  utils.html  widget.html
examples/: b123d_assembly.json  box-edges-states.json  box-edges.json  box-faces-states.json  box-faces.json  box-states.json  box-vertices-states.json  box-vertices.json  box.json  box1.json  boxes-states.json  boxes.json  dirbox.json  edges-states.json  edges.json  faces-states.json  faces.json  hexapod-states.json  hexapod.json  hexapod_m-states.json  hexapod_m.json  longbox-states.json  longbox.json  orientbox.json  profile4040.json  pylones-states.json  single_edges.json  single_vertices.json  torus_knot.json  vertices-states.json  vertices.json
js/: .eslintrc.json  README.md  package-lock.json  package.json  webpack.config.js
js/lib/: app.js  embed.js  extension.js  index.js  labplugin.js  serializer.js  sidecar.js  utils.js  version.js  widget.js
js/style/: index.css
notebooks/: Classic-OCC-Bottle.ipynb  Tests-and-demos.ipynb
